[package]
name = "solana-crowdfunding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=2.2.0"
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
blake3 = ">=1, <1.8"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1
